<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/d_text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/frame"
        android:gravity="center"
        android:padding="10sp"
        android:textSize="20sp"
        android:text="@string/contract_title" />
    
    <TextView
        android:id="@+id/p_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom = "10dp"
        android:text="@string/policy"
        android:padding="10sp" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onClick"
        android:background="@color/button_selecter1"
        android:layout_margin="10dp"
        android:text="@string/next"
        android:textSize="14sp" />
    

</LinearLayout>
