<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
     android:padding="10dp" >

    <TextView
        android:id="@+id/d_text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/f_text"
        android:padding="10sp" />

    <Button
        android:id="@+id/d_button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onClick"
        android:background="@color/button_selecter1"
        android:layout_marginBottom="15dp"
        android:text="@string/OK"
        android:textSize="14sp" />

    <Button
        android:id="@+id/d_button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/button_selecter1"
        android:layout_marginBottom="15dp"
        android:onClick="onClick"
        android:text="@string/NG"
        android:textSize="14sp" />


</LinearLayout>