<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/d_text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/frame"
        android:gravity="center"
        android:padding="10sp"
        android:textSize="20sp"
        android:text="アプリご利用の方" />
    
    <TextView
        android:id="@+id/d_text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/f_text"
        android:padding="10sp" />

    <Button
        android:id="@+id/d_button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onClick"
        android:background="@color/button_selecter1"
        android:layout_margin="10dp"
        android:text="@string/OK"
        android:textSize="14sp" />

    <Button
        android:id="@+id/d_button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/button_selecter1"
        android:layout_margin="10dp"
        android:onClick="onClick"
        android:text="@string/NG"
        android:textSize="14sp" />
    
    

</LinearLayout>
