<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/frame"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/frame"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/setting_title"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/p_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textSize="14sp"
            android:text="@string/setting_info" />

        <Button
            android:id="@+id/change_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@color/button_selecter1"
            android:onClick="onClick"
            android:text="@string/setting_button"
            android:textSize="14sp" />
    </LinearLayout>

</ScrollView>